# AI_engine

./: .env.example  .gitignore  AI_ENGINE_DOCUMENTATION.md  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SERVER_README.md  __init__.py  advanced_features.py  ai_engine.py  billing.py  caching.py  capabilities.py  chat_intelligence.py  claude.md  cli.py  collect_api.md  config.py  debug_timestamp.html  demo_ai_engine.py  diagnose_providers.py  docker-compose.yml  enhanced_health.py  enterprise.py  error_codes.py  infrastructure.py  intelligent_router.py  key_statistics.json  load_test.py  logging_sla.py  middleware.py  model_cache.py  plugin_system.py  pyproject.toml  rate_limit_manager.py  (+8 more)
.agent/plans/: sdk-plan.md
.agent/reviews/: 2026-06-17-complete-codebase-review.md  pip-package-test-report.md  test_all_features.py
.github/: REPOSITORY_DESCRIPTION.md
.github/workflows/: live-tests.yml  mutmut.yml  test.yml
.superpowers/sdd/: task-6-report.md
ai_engine/: __init__.py  __main__.py  _engine.py  _exceptions.py  _version.py  anthropic.py  openai.py  tui.py  tui_files.py  tui_media.py  tui_preferences.py  tui_slash.py  tui_storage.py
ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_engine/resources/: __init__.py  chat.py  embeddings.py  images.py  models.py
ai_engine/server/: app.py  intent_classifier.py
ai_engine/server/chat_module/: db.py  router.py
ai_engine/server/routes/: multimodal.py
ai_engine/tui/: __init__.py  app.py  common.py  files.py  media.py  model_index.py  personas.py  preferences.py  routing.py  routing_engine.py  screens.py  slash.py  storage.py  widgets.py
ai_engine/types/: __init__.py
ai_synapse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cache/: 222eed81b120bd44.json  4d2b8120d683a010.json  54cdd4b3f16ca482.json  c2fdce00bf7689c8.json
chat_module/: db.py  router.py  websocket_manager.py
core/: __main__.py  ai_engine.py  batch.py  capabilities.py  cli.py  config.py  config_sync.py  embeddings.py  enterprise.py  env_bootstrap.py  error_codes.py  health_monitor.py  http_client.py  image_generation.py  infrastructure.py  latency_tracker.py  load_test.py  logging_sla.py  middleware.py  model_cache.py  provider_observability.py  provider_reliability.py  provider_requests.py  rate_limit_manager.py  redis_cache.py  request_queue.py  response_cache.py  streaming.py  stress_test.py  usage_tracker.py  user_paths.py  workflow_engine.py
data/: capabilities_cache.json  openrouter_capabilities.json
data/workflows/: workflows.json
deploy/k8s/: README.md  deployment.yaml
docs/: AI_ENGINE_DOCUMENTATION.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  ROADMAP.md  SECURITY.md  SERVER_README.md  SUBMISSION.md  TUI.md  USER_GUIDE.md  claude.md  collect_api.md
docs/archive/: AI_ENGINE_DOCUMENTATION.md
examples/sdk/: README.md  basic_chat.py  list_models.py  streaming_chat.py
examples/server/: README.md  run_server_test.py
monitoring/: README.md  prometheus-alerts.yml
monitoring/grafana/: provider-health-dashboard.json
providers/: __init__.py  base.py
scripts/: audit_providers.py  cli.py  diagnose_providers.py  mutmut_rotation_gate.sh
static/chat/: chat.css  chat.js
static/js/: dashboard.js
templates/: chat.html  dashboard.html  models.html  providers.html  statistics.html
tests/: conftest.py  server.py  test_advanced_features.py  test_ai_engine.py  test_anthropic_sdk.py  test_api_versioning.py  test_batch_search.py  test_bedrock_vertex.py  test_billing.py  test_branching.py  test_caching.py  test_capabilities.py  test_chat_db.py  test_chat_features.py  test_chat_intelligence.py  test_chat_resource.py  test_chat_router.py  test_cli.py  test_config.py  test_config_sync.py  test_edge_cases.py  test_embeddings.py  test_engine_modes.py  test_enhanced_health.py  test_enterprise.py  test_error_codes.py  test_health_monitor.py  test_image_generation.py  test_infrastructure.py  test_integration.py  test_intelligence.py  test_intelligent_router.py  test_key_rotation_unit.py  test_latency_tracker.py  test_load_testing.py  test_logging_sla.py  test_middleware.py  test_mock_provider_server.py  test_model_cache.py  test_multimodal_routes.py  (+26 more)
tests/features/: conftest.py  test_key_rotation.py  test_server_cache_metrics.py  test_server_health.py  test_server_openai.py  test_server_platform.py  test_server_providers.py
tests/fixtures/: __init__.py  provider_configs.py
uploads/: 0cc29e2b_1781794585.txt  3ea6b8b5_1781865745.md  7d609eb4_1781794459.txt
(+5 files in other folders)
