[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-synapse"
version = "4.0.6"
description = "Free multi-provider AI SDK — drop-in OpenAI & Anthropic compatibility with 27 free providers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI Engine Contributors"}
]
keywords = ["ai", "llm", "openai", "anthropic", "inference", "free-ai", "groq", "gemini", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
server = [
    "aiohttp>=3.8.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "prometheus-client>=0.17.0",
    "slowapi>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.1.0",
    "openai>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mihir0209/AI_engine"
Documentation = "https://github.com/mihir0209/AI_engine/tree/main/docs"
Repository = "https://github.com/mihir0209/AI_engine"
Issues = "https://github.com/mihir0209/AI_engine/issues"

[tool.setuptools.packages.find]
include = ["ai_engine*", "core*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
core = ["*.json"]
ai_engine = ["*.json"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 15
