[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-synapse"
version = "1.0.1"
description = "Free multi-provider AI SDK with terminal TUI, OpenAI-compatible API, and 27+ provider routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI Engine Contributors"}
]
keywords = ["ai", "llm", "openai", "anthropic", "inference", "free-ai", "groq", "gemini", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
server = [
    "aiohttp>=3.8.0",
    "fastapi>=0.104.0,<0.116.0",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.36.0,<0.37.0",
    "jinja2>=3.1.0,<3.2.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "prometheus-client>=0.17.0",
    "slowapi>=0.1.0",
]
tui = [
    "textual>=1.0.0",
    "rapidfuzz>=3.0.0",
    "pillow>=10.0.0",
    "rich-pixels>=3.0.0",
]
all = [
    "ai-synapse[server]",
    "ai-synapse[tui]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.1.0",
    "openai>=2.0.0",
]

[project.scripts]
ai-engine = "ai_engine.__main__:main"

[project.urls]
Homepage = "https://github.com/mihir0209/AI_engine"
Documentation = "https://github.com/mihir0209/AI_engine/tree/main/docs"
Repository = "https://github.com/mihir0209/AI_engine"
Issues = "https://github.com/mihir0209/AI_engine/issues"

[tool.setuptools.packages.find]
include = ["ai_engine*", "core*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico"]
ai_engine = ["config.json", "server/templates/**", "server/static/**", "server/chat_module/**"]
core = ["*.json"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 15
